--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE HTML>
+<head>
+    <head>
+        <meta charset="utf-8">
+        <title>Doodle Doc</title>
+        <link href="css/common.css" rel="stylesheet" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+    </head>
+    <body>
+    	<div>
+    		<a href="#">Meh.</a>
+    	</div>
+    </body>
+</head>
