--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
         <link href="css/common.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+         <script src='js/layers.js'></script>
+         <script src='js/common.js'></script>
     </head>
     <body>
     	<div>
     		<a href="#">Meh.</a>
     	</div>
+    	<div id="tools"></div>
+    	<div id="layers"></div>
     </body>
 </head>
