--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <link href="css/common.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+        <script src='js/Layer.js'></script>
+        <script>
+            var layer = new Layer();  
+            layer.do();
+        </script>
     </head>
     <body>
-    	<div>
+    	<div id='canvas'>
+            
     		<a href="#">Meh.</a>
     	</div>
     </body>
