--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link href="css/common.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
-         <script src='js/layers.js'></script>
-         <script src='js/common.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js'></script>
+        
+        <script src='js/layers.js'></script>
+        <script src='js/common.js'></script>
     </head>
     <body>
     	<div>
