Adding square and circles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js'></script>
         
         <script src='js/layers.js'></script>
+        <script src='js/tools.js'></script>
         <script src='js/common.js'></script>
     </head>
     <body>
