--- a/index.html
+++ b/index.html
@@ -6,16 +6,50 @@
         <link href="css/common.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js'></script>
-        
-        <script src='js/layers.js'></script>
-        <script src='js/common.js'></script>
+         <script src='js/layers.js'></script>
+         <script src='js/common.js'></script>
     </head>
     <body>
-    	<div>
-    		<a href="#">Meh.</a>
-    	</div>
-    	<div id="tools"></div>
-    	<div id="layers"></div>
+        <div id="bigWrap">
+            <div id="canvasWrap"></div>
+            <div id="actionbar"></div>
+            <div id="tools">
+                <ul>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="brush" /></label>
+                    </li>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="shape" /></label>
+                    </li>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="crop" /></label>
+                    </li>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="foo" /></label>
+                    </li>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="bar" /></label>
+                    </li>
+                    <li class="toolBar">
+                        <label><input type="radio"/><img src="foo.png" alt="baz" /></label>
+                    </li>
+                </ul>
+            </div>
+            <div id="layers">
+                <ul>
+                    <li class="layerBar"></li>
+                    <li class="layerBar"></li>
+                    <li class="layerBar"></li>
+                    <li class="layerBar"></li>
+                    <li class="layerBar"></li>
+                </ul>
+
+                <div id="bigwrap"></div>
+            </div>
+        </div>
+        <div id="canvasWrap">
+            <canvas>
+        </div>
+        
     </body>
 </head>
