added Main.css and added layers & tools bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Doodle Doc</title>
         <link href="css/common.css" rel="stylesheet" />
+        <link href="css/main.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
          <script src='js/layers.js'></script>
@@ -16,39 +17,56 @@
             <div id="tools">
                 <ul>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="brush" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="brush" />
+                        </label>
                     </li>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="shape" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="shape" />
+                        </label>
                     </li>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="crop" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="crop" />
+                        </label>
                     </li>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="foo" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="foo" />
+                        </label>
                     </li>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="bar" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="bar" />
+                        </label>
                     </li>
                     <li class="toolBar">
-                        <label><input type="radio"/><img src="foo.png" alt="baz" /></label>
+                        <label>
+                            <input type="radio"/>
+                            <img src="foo.png" alt="baz" />
+                        </label>
                     </li>
                 </ul>
             </div>
             <div id="layers">
                 <ul>
-                    <li class="layerBar"></li>
-                    <li class="layerBar"></li>
-                    <li class="layerBar"></li>
-                    <li class="layerBar"></li>
-                    <li class="layerBar"></li>
+                    <li class="layerBar">Layer 1</li>
+                    <li class="layerBar">Layer 2</li>
+                    <li class="layerBar">Layer 3</li>
+                    <li class="layerBar">Layer 4</li>
+                    <li class="layerBar">Layer 5</li>
                 </ul>
 
                 <div id="bigwrap"></div>
             </div>
         </div>
         <div id="canvasWrap">
-            <canvas>
         </div>
         
     </body>
