--- a/index.html
+++ b/index.html
@@ -16,44 +16,31 @@
     <body>
     	<div id="tools"></div>
         <div id="bigWrap">
-            <div id="canvasWrap"></div>
             <div id="actionbar"></div>
             <div id="tools">
                 <ul>
                     <li class="toolBar">
                         <label>
                             <input type="radio"/>
-                            <img src="foo.png" alt="brush" />
+                            <img src="img/icons/brush.png" alt="brush" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
                             <input type="radio"/>
-                            <img src="foo.png" alt="shape" />
+                            <img src="img/icons/crop.png" alt="crop" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
                             <input type="radio"/>
-                            <img src="foo.png" alt="crop" />
+                            <img src="img/icons/shape.png" alt="shape" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
                             <input type="radio"/>
-                            <img src="foo.png" alt="foo" />
-                        </label>
-                    </li>
-                    <li class="toolBar">
-                        <label>
-                            <input type="radio"/>
-                            <img src="foo.png" alt="bar" />
-                        </label>
-                    </li>
-                    <li class="toolBar">
-                        <label>
-                            <input type="radio"/>
-                            <img src="foo.png" alt="baz" />
+                            <img src="img/icons/text.png" alt="text" />
                         </label>
                     </li>
                 </ul>
