--- a/index.html
+++ b/index.html
@@ -14,32 +14,31 @@
         <script src='js/common.js'></script>
     </head>
     <body>
-    	<div id="tools"></div>
         <div id="bigWrap">
             <div id="actionbar"></div>
             <div id="tools">
                 <ul>
                     <li class="toolBar">
                         <label>
-                            <input type="radio"/>
+                            <input type="radio" name="tool" value="brush"/>
                             <img src="img/icons/brush.png" alt="brush" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
-                            <input type="radio"/>
+                            <input type="radio" name="tool" value="crop"/>
                             <img src="img/icons/crop.png" alt="crop" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
-                            <input type="radio"/>
+                            <input type="radio" name="tool" value="shape" checked/>
                             <img src="img/icons/shape.png" alt="shape" />
                         </label>
                     </li>
                     <li class="toolBar">
                         <label>
-                            <input type="radio"/>
+                            <input type="radio" name="tool" value="text"/>
                             <img src="img/icons/text.png" alt="text" />
                         </label>
                     </li>
