Random crap lol

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Doodle Doc</title>
-        <link href="css/common.css" rel="stylesheet" />
-        <link href="css/main.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js'></script>
-        
+		
+        <script src='js/actionbar.js'></script>
         <script src='js/layers.js'></script>
         <script src='js/tools.js'></script>
         <script src='js/common.js'></script>
+
+        <link href="css/common.css" rel="stylesheet" />
+        <link href="css/main.css" rel="stylesheet" />
     </head>
     <body>
     	<div id="tools"></div>
