add image via upload or url working

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <script src='js/layers.js'></script>
         <script src='js/tools.js'></script>
         <script src='js/common.js'></script>
+        <script src="js/dropzone.js"></script>
+        <script type="text/javascript" src="js/upload.js"></script>
     </head>
     <body>
+    <label>Image File:</label><br/>
+    <input type="file" id="imageLoader" name="imageLoader"/>
+    <input type='text' id='url' />
+    <button id='imageUrl'></button>
     	<div id="tools"></div>
         <div id="bigWrap">
             <div id="actionbar"></div>
