updated layers, update users.js, added Ppl icons

--- a/index.html
+++ b/index.html
@@ -53,11 +53,46 @@
             </div>
             <div id="layers">
                 <ul>
-                    <li class="layerBar">Layer 1</li>
-                    <li class="layerBar">Layer 2</li>
-                    <li class="layerBar">Layer 3</li>
-                    <li class="layerBar">Layer 4</li>
-                    <li class="layerBar">Layer 5</li>
+                    <li class="layerBar" data-layerid="1">
+                        <a href="#">
+                            <p>Layer</p>
+                            <div class="usersIconWrap">
+                                <img src="img/ppl/blue_person.png" alt="user"/>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="layerBar" data-layerid="2">
+                        <a href="#">
+                            <p>Layer</p>
+                            <div class="usersIconWrap">
+                                <img src="img/ppl/blue_person.png" alt="user"/>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="layerBar" data-layerid="3">
+                        <a href="#">
+                            <p>Layer</p>
+                            <div class="usersIconWrap">
+                                <img src="img/ppl/blue_person.png" alt="user"/>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="layerBar" data-layerid="4">
+                        <a href="#">
+                            <p>Layer</p>
+                            <div class="usersIconWrap">
+                                <img src="img/ppl/blue_person.png" alt="user"/>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="layerBar" data-layerid="5">
+                        <a href="#">
+                            <p>Layer</p>
+                            <div class="usersIconWrap">
+                                <img src="img/ppl/blue_person.png" alt="user"/>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
 
                 <div id="bigwrap"></div>
