images work now and have a UI to match

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
         <script src='js/layers.js'></script>
         <script src='js/tools.js'></script>
         <script src='js/common.js'></script>
+        <script src='js/picoModal-2.0.1.min.js'></script>
 
 
         <link href="css/common.css" rel="stylesheet" />
         <link href="css/main.css" rel="stylesheet" />
     </head>
     <body>
-        <label>Image File:</label><br/>
-        <input type="file" id="imageLoader" name="imageLoader"/>
-        <input type='text' id='url' />
-        <button id='imageUrl'></button>
         <div id="bigWrap">
             <div id="actionbar"></div>
             <div id="tools">
@@ -61,6 +58,9 @@
                 </ul>
 
                 <div id="bigwrap"></div>
+            </div>
+            <div id='linkUpload'>
+                <img src='img/icons/import_photo.png' id='pushNotify' />
             </div>
         </div>
         <div id="canvasWrap">
