Got current user to Appear on current layer

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             </div>
             <div id="layers">
                 <ul>
-                    <li class="layerBar" data-layerid="1">
+<!--                     <li class="layerBar" data-layerid="1">
                         <a href="#">
                             <p>Layer</p>
                             <div class="usersIconWrap">
                                 <img src="img/ppl/blue_person.png" alt="user"/>
                             </div>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <div id="bigwrap"></div>
