--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                             <img src="img/icons/text.png" alt="text" />
                         </label>
                     </li>
+                    <li class="toolBar">
+                        <label>
+                            <input type="radio" name="tool" value="eraser"/>
+                            <img src="img/icons/eraser.png" alt="eraser" />
+                        </label>
+                    </li>
                 </ul>
             </div>
             <div id="layers">
