--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                             <img src="img/icons/eraser.png" alt="eraser" />
                         </label>
                     </li>
+                    <li class="toolBar">
+                        <label>
+                            <input type="radio" name="tool" value="filters"/>
+                            <img src="img/icons/eraser.png" alt="filters" />
+                        </label>
+                    </li>
                 </ul>
             </div>
             <div id="layers">
