--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="toolBar">
                         <label>
                             <input type="radio" name="tool" value="filters"/>
-                            <img src="img/icons/eraser.png" alt="filters" />
+                            <img src="img/icons/filter.png" alt="filters" />
                         </label>
                     </li>
                 </ul>
